--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/solarized_dark.min.css">
-    <link rel="stylesheet" href="https://faph.github.io/wcss/styles.css">
-    <link rel="stylesheet" href="https://faph.github.io/wcss/custom.css">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="https://faph.github.io/windex.xml">
+    <link rel="stylesheet" href="https://faph.github.io/w/css/styles.css">
+    <link rel="stylesheet" href="https://faph.github.io/w/css/custom.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="https://faph.github.io/w/index.xml">
 
     
     <title>W</title>
@@ -31,7 +31,7 @@
 
   <header class="l-header">
     <div class="p-logo">
-      <a href="https://faph.github.io/w">W</a>
+      <a href="https://faph.github.io/w/">W</a>
     </div>
   </header>
 
@@ -47,7 +47,7 @@
         <div class="col-sm-6">
           <article class="grid">
   <a href="https://faph.github.io/w/post/not-so-great/">
-    <div class="image" style="background-image: url(https://faph.github.io/wimages/default.jpg);"></div>
+    <div class="image" style="background-image: url(https://faph.github.io/w/images/default.jpg);"></div>
     <footer>
       <div class="date">
         <time>Sat, Aug 13, 2016</time>
@@ -81,7 +81,7 @@
       
       <article class="li">
   <a href="https://faph.github.io/w/post/not-so-great/" class="clearfix">
-    <div class="image" style="background-image: url(https://faph.github.io/wimages/default.jpg);"></div>
+    <div class="image" style="background-image: url(https://faph.github.io/w/images/default.jpg);"></div>
     <footer>
       <div class="date">
         <time>Sat, Aug 13, 2016</time>
